// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[SNAPSHOT][Componentes][Common][BasicSelect] - Lista desplegable. Debe pintar el componente con los siguientes modificadores: (Deshabilitado: cierto)(ID: numérico). 1`] = `
.c0 {
  box-sizing: border-box;
  display: inline-block;
  height: 60px;
  margin: 0px;
  min-width: 250px;
  padding: 0px;
  position: relative;
  width: auto;
}

.c4 {
  border-top: 0px solid transparent;
  border-left: 0px solid transparent;
  border-right: 0px solid transparent;
  border-bottom: 1px solid #BFBFBF;
  color: #BFBFBF;
  height: 45px;
  font-family: "Open Sans",sans-serif;
  font-size: 11px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  left: 0px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0px;
  padding: 0px;
  position: absolute;
  text-align: left;
  top: 0px;
  width: 100%;
  white-space: nowrap;
  z-index: 1;
  -webkit-transition: color 0.3s ease-in-out,font 0.1s linear,padding 0.1s linear;
  transition: color 0.3s ease-in-out,font 0.1s linear,padding 0.1s linear;
}

.c4:after {
  background: #1476FB;
  bottom: -1px;
  content: '';
  height: 1px;
  left: 50%;
  position: absolute;
  -webkit-transition: all 0.3s linear;
  transition: all 0.3s linear;
  width: 0px;
}

.c5:focus ~ .c3 {
  color: #1476FB;
}

.c5:focus ~ .c3:after {
  left: 0px;
  width: 100%;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 16 9' xmlns='http://www.w3.org/2000/svg'%3E%3Ctitle%3Eabajo%3C/title%3E%3Cpath d='M7.916 8.636a.718.718 0 0 1-.509-.21L.211 1.228A.719.719 0 1 1 1.229.21l6.687 6.688L14.604.21a.719.719 0 1 1 1.017 1.018L8.425 8.425a.718.718 0 0 1-.509.211' fill='%238B8B8B' fill-rule='evenodd'/%3E%3C/svg%3E");
  background-position: right 5px center;
  background-repeat: no-repeat;
  background-size: 15px 15px;
  border: none;
  border-radius: 0px;
  color: #BFBFBF;
  cursor: pointer;
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  font-weight: normal;
  height: 30px;
  left: 0px;
  overflow: hidden;
  padding: 0px 25px 0px 0px;
  position: absolute;
  top: 15px;
  text-indent: 1px;
  text-overflow: ellipsis;
  white-space: nowrap;
  width: 100%;
  z-index: 2;
}

.c1:focus {
  color: #000;
  outline: none;
}

.c1:focus ~ .c3 {
  color: #1476FB;
}

.c1:focus ~ .c3:after {
  left: 0px;
  width: 100%;
}

.c2 {
  color: #BFBFBF;
  font-family: "Open Sans",sans-serif;
  font-size: 14px;
  font-weight: normal;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0px;
  overflow: hidden;
  padding: 0px;
  text-align: left;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2:disabled {
  color: #BFBFBF;
}

<div
  className="c0"
>
  <select
    className="c1"
    disabled={true}
    id="options"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="Seleccione una opción"
    value={1}
  >
    <option
      className="c2"
      value="-1"
    >
      Seleccione una opción
    </option>
    <option
      className="c2"
      disabled={false}
      value={1}
    >
      Opción #1
    </option>
    <option
      className="c2"
      disabled={false}
      value={2}
    >
      Opción #2
    </option>
    <option
      className="c2"
      disabled={false}
      value={3}
    >
      Opción #3
    </option>
    <option
      className="c2"
      disabled={false}
      value={4}
    >
      Opción #4
    </option>
    <option
      className="c2"
      disabled={false}
      value={5}
    >
      Opción #5
    </option>
  </select>
  <label
    className="c3 c4"
  >
    Estado: normal
  </label>
</div>
`;

exports[`[SNAPSHOT][Componentes][Common][BasicSelect] - Lista desplegable. Debe pintar el componente con los siguientes modificadores: (Deshabilitado: falso)(ID: numérico). 1`] = `
.c0 {
  box-sizing: border-box;
  display: inline-block;
  height: 60px;
  margin: 0px;
  min-width: 250px;
  padding: 0px;
  position: relative;
  width: auto;
}

.c4 {
  border-top: 0px solid transparent;
  border-left: 0px solid transparent;
  border-right: 0px solid transparent;
  border-bottom: 1px solid #BFBFBF;
  color: #242424;
  height: 45px;
  font-family: "Open Sans",sans-serif;
  font-size: 11px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  left: 0px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0px;
  padding: 0px;
  position: absolute;
  text-align: left;
  top: 0px;
  width: 100%;
  white-space: nowrap;
  z-index: 1;
  -webkit-transition: color 0.3s ease-in-out,font 0.1s linear,padding 0.1s linear;
  transition: color 0.3s ease-in-out,font 0.1s linear,padding 0.1s linear;
}

.c4:after {
  background: #1476FB;
  bottom: -1px;
  content: '';
  height: 1px;
  left: 50%;
  position: absolute;
  -webkit-transition: all 0.3s linear;
  transition: all 0.3s linear;
  width: 0px;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 16 9' xmlns='http://www.w3.org/2000/svg'%3E%3Ctitle%3Eabajo%3C/title%3E%3Cpath d='M7.916 8.636a.718.718 0 0 1-.509-.21L.211 1.228A.719.719 0 1 1 1.229.21l6.687 6.688L14.604.21a.719.719 0 1 1 1.017 1.018L8.425 8.425a.718.718 0 0 1-.509.211' fill='%238B8B8B' fill-rule='evenodd'/%3E%3C/svg%3E");
  background-position: right 5px center;
  background-repeat: no-repeat;
  background-size: 15px 15px;
  border: none;
  border-radius: 0px;
  color: #A7A7A7;
  cursor: pointer;
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  font-weight: normal;
  height: 30px;
  left: 0px;
  overflow: hidden;
  padding: 0px 25px 0px 0px;
  position: absolute;
  top: 15px;
  text-indent: 1px;
  text-overflow: ellipsis;
  white-space: nowrap;
  width: 100%;
  z-index: 2;
}

.c1:focus {
  color: #000;
  outline: none;
}

.c1:focus ~ .c3 {
  color: #1476FB;
}

.c1:focus ~ .c3:after {
  left: 0px;
  width: 100%;
}

.c2 {
  color: #242424;
  font-family: "Open Sans",sans-serif;
  font-size: 14px;
  font-weight: normal;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0px;
  overflow: hidden;
  padding: 0px;
  text-align: left;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2:disabled {
  color: #BFBFBF;
}

<div
  className="c0"
>
  <select
    className="c1"
    disabled={false}
    id="options"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="Seleccione una opción"
    value={1}
  >
    <option
      className="c2"
      value="-1"
    >
      Seleccione una opción
    </option>
    <option
      className="c2"
      disabled={false}
      value={1}
    >
      Opción #1
    </option>
    <option
      className="c2"
      disabled={false}
      value={2}
    >
      Opción #2
    </option>
    <option
      className="c2"
      disabled={false}
      value={3}
    >
      Opción #3
    </option>
    <option
      className="c2"
      disabled={true}
      value={4}
    >
      Opción #4
    </option>
    <option
      className="c2"
      disabled={false}
      value={5}
    >
      Opción #5
    </option>
  </select>
  <label
    className="c3 c4"
  >
    Estado: normal
  </label>
</div>
`;
